# libopenair

./: .gitignore  AUTHORS  INSTALL  LICENSE  README  configure.ac
src/: Makefile.am  configuration.cc  curl_service_connector.cc
src/libopenair/: configuration.hh  curl_service_connector.hh
test/: Makefile.am  cpputest_main.cc
test/configuration/: configuration_keys.cc  get_configuration_file_path.cc  operators_overload.cc
