LDADD = -lCppUTest -lCppUTestExt
check_PROGRAMS = libopenair
libopenair_CXXFALGS = -W -Wall -std=c++14
libopenair_SOURCES = \
	cpputest_main.cc \
	configuration/configuration_keys.cc \
	configuration/get_configuration_file_path.cc \
	configuration/operators_overload.cc \
	../../src/libopenair/configuration.hh \
	../../src/configuration.cc
